force-app/main/default/objects/Address_Usage__c/Address_Usage__c.object-meta.xml
<CustomObject>
    <label>Address Usage</label>
    <nameField>
        <displayFormat>USG-{0000000000}</displayFormat>
        <label>Usage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address Usages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>