force-app/main/default/objects/Address_Usage__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Address Usages</relationshipLabel>
    <relationshipName>Address_Usages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>