force-app/main/default/objects/Address_Usage__c/fields/Address_Mask__c.field-meta.xml
<CustomField>
    <fullName>Address_Mask__c</fullName>
    <formula>Address__r.Address_Line_1__c &amp; &quot;, &quot; &amp; Address__r.Address_Line_2__c &amp; &quot;, &quot; &amp; Address__r.City__c &amp; &quot;, &quot; &amp; Address__r.Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>